PPC64: Failure on assert(lrgmask.is_aligned_sets(RegMask::SlotsPerVecX))

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 10
    • Affects Version/s: 10
    • Component/s: hotspot
    • None
    • 10
    • b31
    • ppc

      After introducing SLP with VSX in PPC (https://bugs.openjdk.java.net/browse/JDK-8188139), an assertion assert(lrgmask.is_aligned_sets(RegMask::SlotsPerVecX)) in chaitin.cpp fails.

            Assignee:
            Michihiro Horie
            Reporter:
            Michihiro Horie
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: